[package]
name = "tcp-probe"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Chen <marcus@marcuschen.dev>"]
description = "Fast TCP health probe for checking service availability"
license = "MIT"
readme = "README.md"
keywords = ["tcp", "health-check", "probe", "network", "cli"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }